@@ -73,6 +73,7 @@ Template for new versions:
 - `caravan`: bring goods to depot screen now shows (approximate) distance from item to depot
 - `gui/design`: circles are more circular (now matches more pleasing shape generated by ``digcircle``)
 - `gui/quickfort`: you can now delete your blueprints from the blueprint load dialog
+- `caravan`: remember filter settings for pedestal item assignment dialog
 - `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
 - `quickfort`: support enabling `logistics` features for autoforbid and autoclaim on stockpiles
 - `gui/quickfort`: allow farm plots, dirt roads, and paved roads to be designated around partial obstructions without callling it an error, matching vanilla behavior
